css hack to fix alignment

--- a/content/betrayal/css/main.css
+++ b/content/betrayal/css/main.css
@@ -1,4 +1,4 @@
-/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
+fdata/*! HTML5 Boilerplate v5.0 | MIT License | http://h5bp.com/ */
 
 @import url(https://fonts.googleapis.com/css?family=Bitter|Arimo|VT323);
 
@@ -308,6 +308,7 @@ ul {
 
     #data {
         width: 300px;
+        margin-bottom: 9em;
     }
 
     .abstract {
